--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 bevy = "0.13.1"
 rand = "0.8"
 once_cell = "1.19"
+rand_core = "0.6"
+bevy_rand = { version = "0.5", features = ["rand_chacha", "wyrand"] }
 bevy_spritesheet_animation = "0.1.0"
